# kotai

./: .gitignore  README.md  fileCounts.zsh  poetry.toml  pyproject.toml
kotai/: Jotai.py  __main__.py
kotai/benchInfo/: GetBenchInfo.py
kotai/console/: application.py
kotai/constraints/: basicConstraints.py  genkonstrain.py
kotai/kotypes/: __init__.py
kotai/plugin/: CFGgrind.py  Clang.py  CompileBenchmarks.py  Jotai.py  PrintDescriptors.py  RunBenchmarks.py
kotai/templates/: benchmark.py
kotai/types/: __init__.py
output/: caseStdout.csv  switchCases.csv
tests/: test_kotai.py
util/: Untitled.ipynb  calc_correlation.ipynb  collectCFGgrindInstCounts  collectCFGgrindInstCounts.zsh  sanity  statParser.ipynb  statParser.py
util/output/: CFGInfoStats_case_1-bigarr  CFGInfo_case_int-bounds_O0.csv  CFG_allOpt_big-arr-10x.csv  CFG_allOpt_big-arr.csv  CFG_allOpt_bintree.csv  CFG_allOpt_dlinked.csv  CFG_allOpt_linked.csv  cfgInfo_case0_O1.csv  cfgInfo_case0_Oz.csv  cfgInfo_case1_O0.csv  cfgInfo_case1_Oz.csv  cfgInfo_case2_O1.csv  retVal_and_CFGstatsbig-arr  retVal_and_CFGstatsbig-arr-10x  retVal_and_CFGstatsbintree  retVal_and_CFGstatsdlinked  retVal_and_CFGstatsempty  retVal_and_CFGstatsint-bounds  retVal_and_CFGstatslinked
