[tool.poetry]
name = "kotai"
version = "0.1.0"
description = ""
authors = ["Bruno Conde Kind <brunocondekind@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
