[tool.poetry]
name = "kotai"
version = "0.1.0"
description = ""
authors = ["Bruno Conde Kind <brunocondekind@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.0"
scipy = "^1.7.2"
pandas = "^1.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.5.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
